[tool.poetry]
name = "blog-langchain-db"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "blog_langchain_db"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.0.311"
openai = "^0.28.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
pandas = "^2.1.1"

[tool.poetry.scripts]
main = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
